Revised Chapter 13 text style format

--- a/Capítulo 13 - Estudo de Caso -  Seleção de Estruturas de Dados.ipynb
+++ b/Capítulo 13 - Estudo de Caso -  Seleção de Estruturas de Dados.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "O módulo `random` fornece funções que geram números pseudoaleatórios (que chamarei apenas de “aleatórios” daqui em diante).\n",
     "\n",
-    "A função `random` retorna um número de ponto flutuante entre `0,0` e `1,0` (incluindo `0,0`, mas não 1,0). Cada vez que `random` é chamada, você recebe o próximo número em uma longa série. Para ver uma amostra, execute este loop:"
+    "A função `random` retorna um número de ponto flutuante entre `0,0` e `1,0` (incluindo `0,0`, mas não 1,0). Cada vez que `random` é chamada, você recebe o próximo número em uma longa série. Para ver uma amostra, execute este _loop_:"
    ]
   },
   {
@@ -137,7 +137,7 @@
     "\n",
     "### Exercício 13.5\n",
     "\n",
-    "Escreva uma função chamada `choose_from_hist` que receba um histograma como definido em “Um dicionário como uma coleção de contadores”, no Capitúlo 11, e retorne um valor aleatório do histograma, escolhido por probabilidade em proporção à frequência. Por exemplo, para este histograma:"
+    "Escreva uma função chamada `choose_from_hist` que receba um histograma como definido em “Um dicionário como uma coleção de contadores”, no Capítulo 11, e retorne um valor aleatório do histograma, escolhido por probabilidade em proporção à frequência. Por exemplo, para este histograma:"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "source": [
     "Este programa lê `emma.txt`, que contém o texto de _Emma_, de Jane Austen.\n",
     "\n",
-    "`process_file` faz o loop pelas linhas do arquivo, passando-as uma a uma para `process_line`. O histograma `hist` está sendo usado como um acumulador.\n",
+    "`process_file` faz o _loop_ pelas linhas do arquivo, passando-as uma a uma para `process_line`. O histograma `hist` está sendo usado como um acumulador.\n",
     "\n",
     "`process_line` usa o método de `string` `replace` para substituir hífens por espaços antes de usar `split` para quebrar a linha em uma lista de strings. Ele atravessa a lista de palavras e usa `strip` e `lower` para retirar a pontuação e converter tudo em letras minúsculas. (Dizer que as strings “são convertidas” é uma forma simples de explicar a coisa; lembre-se de que as strings são imutáveis, então métodos como `strip` e `lower` retornam novas strings.)\n",
     "\n",
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Em cada tupla, a frequência aparece primeiro, então a lista resultante é ordenada por frequência. Aqui está um loop que imprime as 10 palavras mais comuns:"
+    "Em cada tupla, a frequência aparece primeiro, então a lista resultante é ordenada por frequência. Aqui está um _loop_ que imprime as 10 palavras mais comuns:"
    ]
   },
   {
@@ -399,7 +399,7 @@
     "\n",
     "## 13.6 - Subtração de dicionário\n",
     "\n",
-    "Encontrar as palavras do livro que não estão na lista de palavras de words.txt é um problema que você pode reconhecer como subtração de conjuntos; isto é, queremos encontrar todas as palavras de um conjunto (as palavras no livro) que não estão no outro (as palavras na lista).\n",
+    "Encontrar as palavras do livro que não estão na lista de palavras de `words.txt` é um problema que você pode reconhecer como subtração de conjuntos; isto é, queremos encontrar todas as palavras de um conjunto (as palavras no livro) que não estão no outro (as palavras na lista).\n",
     "\n",
     "`subtract` recebe os dicionários `d1` e `d2` e devolve um novo dicionário que contém todas as chaves de `d1` que não estão em `d2`. Como não nos preocupamos com os valores, estabelecemos todos como `None`:"
    ]
@@ -422,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para encontrar as palavras no livro que não estão em words.txt, podemos usar `process_file` para construir um histograma para words.txt, e então subtrair:"
+    "Para encontrar as palavras no livro que não estão em words.txt, podemos usar `process_file` para construir um histograma para `words.txt`, e então subtrair:"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Algumas dessas palavras são nomes e possessivos. Os outros, como “rencontre”, já não são de uso comum. Mas algumas são palavras comuns que realmente deveriam estar na lista!\n",
+    "Algumas dessas palavras são nomes e possessivos. Os outros, como “_rencontre_”, já não são de uso comum. Mas algumas são palavras comuns que realmente deveriam estar na lista!\n",
     "\n",
     "### Exercício 13.6\n",
     "\n",
@@ -549,13 +549,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nesse texto, a frase “half the” sempre é seguida pela palavra “bee”, mas a frase “the bee” pode ser seguida por “has” ou “is”.\n",
+    "Nesse texto, a frase “_half the_” sempre é seguida pela palavra “_bee_”, mas a frase “_the bee_” pode ser seguida por “_has_” ou “_is_”.\n",
     "\n",
-    "O resultado da análise de Markov é um mapeamento de cada prefixo (como “half the” e “the bee”) a todos os sufixos possíveis (como “has” e “is”).\n",
+    "O resultado da análise de Markov é um mapeamento de cada prefixo (como “_half the_” e “_the bee_”) a todos os sufixos possíveis (como “_has_” e “_is_”).\n",
     "\n",
     "Com este mapeamento você pode gerar um texto aleatório, começando com qualquer prefixo e escolhendo a esmo entre os sufixos possíveis. Em seguida, você pode combinar o fim do prefixo e o novo sufixo para formar o próximo prefixo e repetir.\n",
     "\n",
-    "Por exemplo, se você começar com o prefixo “Half a”, então a próxima palavra tem que ser “bee”, porque o prefixo só aparece uma vez no texto. O prefixo seguinte é “a bee”, então o próximo sufixo poderia ser “philosophically”, “be” ou “due”.\n",
+    "Por exemplo, se você começar com o prefixo “_Half a_”, então a próxima palavra tem que ser “_bee_”, porque o prefixo só aparece uma vez no texto. O prefixo seguinte é “a bee”, então o próximo sufixo poderia ser “_philosophically_”, “_be_” ou “_due_”.\n",
     "\n",
     "Neste exemplo, o comprimento do prefixo é sempre dois, mas você pode fazer a análise de Markov com qualquer comprimento de prefixo.\n",
     "\n",
@@ -567,7 +567,7 @@
     "\n",
     "__b)__ Acrescente uma função ao programa anterior para gerar texto aleatório baseado na análise de Markov. Aqui está um exemplo de _Emma_ com o comprimento de prefixo 2.\n",
     "\n",
-    "> He was very clever, be it sweetness or be angry, ashamed or only amused, at such a stroke. She had never thought of Hannah till you were never meant for me?” “I cannot make speeches, Emma:” he soon cut it all himself.\n",
+    "> _He was very clever, be it sweetness or be angry, ashamed or only amused, at such a stroke. She had never thought of Hannah till you were never meant for me?” “I cannot make speeches, Emma:” he soon cut it all himself._\n",
     "\n",
     "Para este exemplo, deixei a pontuação anexada às palavras. O resultado é quase sintaticamente correto, mas não exatamente. Semanticamente, quase faz sentido, mas não exatamente.\n",
     "\n",
@@ -575,7 +575,7 @@
     "\n",
     "__c)__ Uma vez que o seu programa esteja funcionando, você pode querer tentar uma mistura: se combinar o texto de dois ou mais livros, o texto aleatório gerado misturará o vocabulário e frases das fontes de formas  interessantes.\n",
     "\n",
-    "Crédito: este estudo de caso é baseado em um exemplo de Kernighan and Pike, The Practice of Programming, Addison-Wesley, 1999.\n",
+    "Crédito: este estudo de caso é baseado em um exemplo de Kernighan and Pike, \"_The Practice of Programming_\", Addison-Wesley, 1999.\n",
     "\n",
     "É uma boa ideia tentar fazer este exercício antes de continuar; depois você pode baixar a minha solução em http://thinkpython2.com/code/markov.py. Também vai precisar de http://thinkpython2.com/code/emma.txt.\n",
     "\n",
@@ -595,7 +595,7 @@
     "\n",
     "Para os sufixos, uma opção é uma lista; outra é um histograma (dicionário).\n",
     "\n",
-    "Como você deve escolher? O primeiro passo é pensar nas operações que você vai precisar implementar para cada estrutura de dados. Para os prefixos, é preciso poder retirar palavras do começo e acrescentar no fim. Por exemplo, se o prefixo atual é “Half a” e a próxima palavra é “bee”, você tem que poder formar o próximo prefixo, “a bee”.\n",
+    "Como você deve escolher? O primeiro passo é pensar nas operações que você vai precisar implementar para cada estrutura de dados. Para os prefixos, é preciso poder retirar palavras do começo e acrescentar no fim. Por exemplo, se o prefixo atual é “_Half a_” e a próxima palavra é “_bee_”, você tem que poder formar o próximo prefixo, “_a bee_”.\n",
     "\n",
     "Sua primeira escolha pode ser uma lista, pois é fácil acrescentar e retirar elementos, mas também precisamos poder usar os prefixos como chaves em um dicionário, para excluir listas. Com tuplas, você não pode acrescentar ou retirar, mas pode usar o operador de adição para formar uma nova tupla:"
    ]
@@ -614,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`shift` recebe uma tupla de palavras, prefix, e uma string, word, e forma uma nova tupla que tem todas as palavras em prefix, exceto a primeira e word adicionada no final.\n",
+    "`shift` recebe uma tupla de palavras, `prefix`, e uma string, `word`, e forma uma nova tupla que tem todas as palavras em `prefix`, exceto a primeira e `word` adicionada no final.\n",
     "\n",
     "Para a coleção de sufixos, as operações que precisamos executar incluem a soma de um novo sufixo (ou aumento da frequência de um existente), e a escolha de um sufixo aleatório.\n",
     "\n",
@@ -632,19 +632,19 @@
     "\n",
     "Quando estiver depurando um programa, especialmente se estiver trabalhando em um erro difícil, há cinco coisas que você pode tentar:\n",
     "\n",
-    "*Leitura:*<br>\n",
+    "Leitura:<br>\n",
     ">Examine seu código, leia-o para você mesmo e verifique se diz o que você pensou em dizer.\n",
     "\n",
-    "*Execução:* <br>\n",
-    ">Experimente fazer alterações e executar versões diferentes. Muitas vezes, ao se expor a coisa certa no lugar certo do programa, o problema fica óbvio, mas pode ser necessário construir o scaffolding.\n",
+    "Execução: <br>\n",
+    ">Experimente fazer alterações e executar versões diferentes. Muitas vezes, ao se expor a coisa certa no lugar certo do programa, o problema fica óbvio, mas pode ser necessário construir o _scaffolding_.\n",
     "\n",
-    "*Ruminação:* <br>\n",
+    "Ruminação: <br>\n",
     ">Pense por algum tempo! Qual é o tipo do erro: de sintaxe, de tempo de execução ou semântico? Quais informações você consegue obter a partir das mensagens de erro, ou da saída do programa? Que tipo de erro pode causar o problema que está vendo? O que você mudou por último, antes que o problema aparecesse?\n",
     "\n",
-    "*Conversa com o pato de borracha (rubberducking):* <br>\n",
+    "Conversa com o pato de borracha (_rubberducking_): <br>\n",
     ">Ao explicar o problema a alguém, às vezes você consegue encontrar a resposta antes de terminar a explicação. Muitas vezes, não é preciso nem haver outra pessoa; você pode falar até com um pato de borracha. E essa é a origem de uma estratégia bem conhecida chamada de depuração do pato de borracha. Não estou inventando isso, veja https://en.wikipedia.org/wiki/Rubber_duck_debugging.\n",
     "\n",
-    "*Retirada:* <br>\n",
+    "Retirada: <br>\n",
     ">Em um determinado ponto, a melhor coisa a fazer é voltar atrás e desfazer as alterações recentes, até chegar de volta a um programa que funcione e que você entenda. Então você pode começar a reconstruir.\n",
     "\n",
     "Programadores iniciantes às vezes ficam presos em uma dessas atividades e esquecem das outras. Cada atividade vem com o seu próprio modo de falha.\n",
@@ -701,7 +701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "onde s e c são parâmetros que dependem do idioma e do texto. Se você tomar o logaritmo de ambos os lados desta equação, obtém:"
+    "onde `s` e `c` são parâmetros que dependem do idioma e do texto. Se você tomar o logaritmo de ambos os lados desta equação, obtém:"
    ]
   },
   {
@@ -715,9 +715,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se você traçar o log de f contra o log de r, terá uma linha reta com uma elevação -s e interceptar o log de c.\n",
+    "Se você traçar o `log` de `f` contra o `log` de `r`, terá uma linha reta com uma elevação `-s` e interceptar o `log` de `c`.\n",
     "\n",
-    "Escreva um programa que leia um texto em um arquivo, conte as frequências das palavras e exiba uma linha para cada palavra, em ordem descendente da frequência, com log de f e log de r. Use o programa gráfico de sua escolha para traçar os resultados e verifique se formam uma linha reta. Você pode estimar o valor de s?\n",
+    "Escreva um programa que leia um texto em um arquivo, conte as frequências das palavras e exiba uma linha para cada palavra, em ordem descendente da frequência, com `log` de `f` e `log` de `r`. Use o programa gráfico de sua escolha para traçar os resultados e verifique se formam uma linha reta. Você pode estimar o valor de `s`?\n",
     "\n",
     "Solução: http://thinkpython2.com/code/zipf.py. Para executar a minha solução, você vai precisar do módulo de gráficos `matplotlib`. Se você instalou o Anaconda, já tem o `matplotlib`; se não tiver, é preciso instalá-lo."
    ]
@@ -739,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
